added link to repo, fixed canvas size/position

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <input type="radio" name="demo" id="interactive">Interactive</input>
     <input type="radio" name="demo" id="physics">Physics</input>
     <input type="radio" name="demo" id="piano">Piano</input>
+    <p><a href="https://github.com/bit101/tones">https://github.com/bit101/tones</a></p>
   </div>
 
     
